--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     },
     "commit": "./node_modules/cz-customizable/standalone.js",
     "dependencies": {
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-slot": "^1.0.2",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
         "commitizen": "^4.3.0",
         "commitlint": "^18.6.1",
         "commitlint-config-gitmoji": "^2.3.1",
@@ -21,8 +27,12 @@
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "next": "14.1.0",
+        "next-themes": "^0.2.1",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-icons": "^5.0.1",
+        "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/node": "^20",
