--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
+        "@vercel/analytics": "^1.2.2",
+        "@vercel/speed-insights": "^1.0.10",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "commitizen": "^4.3.0",
