--- a/package.json
+++ b/package.json
@@ -14,15 +14,11 @@
     },
     "commit": "./node_modules/cz-customizable/standalone.js",
     "dependencies": {
-        "@mdx-js/loader": "^3.0.1",
-        "@mdx-js/react": "^3.0.1",
-        "@next/mdx": "^14.1.3",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
-        "@types/mdx": "^2.0.11",
         "@vercel/analytics": "^1.2.2",
         "@vercel/speed-insights": "^1.0.10",
         "class-variance-authority": "^0.7.0",
@@ -30,6 +26,7 @@
         "commitizen": "^4.3.0",
         "commitlint": "^19.0.3",
         "commitlint-config-gitmoji": "^2.3.1",
+        "contentful": "^10.8.1",
         "cz-customizable": "^7.0.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
@@ -38,10 +35,14 @@
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^5.0.1",
+        "react-markdown": "^9.0.1",
+        "remark-frontmatter": "^5.0.0",
+        "remark-gfm": "^4.0.0",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.10",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
