:sparkles: feat(yehtetaung): fix article from github repo

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
 CONTENTFUL_PREVIEW_ACCESS_TOKEN=IxOqyrjGoEKlQxrcGV2abbp4yev4Ls4f7DpJddvQvI8
 CONTENTFUL_ACCESS_TOKEN=spQ12QGx1x_vMNu4oJOCvKMg-EfYTKDQ-YVP7h7L0SE
 CONTENTFUL_SPACE_ID=qu7h5gq9x6r6
+
+GITHUB_IMAGE_URL=https://raw.githubusercontent.com/yellhtetaung/Articles/main/assets/
+GITHUB_TOKEN=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
