--- a/package.json
+++ b/package.json
@@ -26,18 +26,15 @@
         "commitizen": "^4.3.0",
         "commitlint": "^19.0.3",
         "commitlint-config-gitmoji": "^2.3.1",
-        "contentful": "^10.8.1",
         "cz-customizable": "^7.0.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "next": "14.1.2",
+        "next-mdx-remote": "^4.4.1",
         "next-themes": "^0.2.1",
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^5.0.1",
-        "react-markdown": "^9.0.1",
-        "remark-frontmatter": "^5.0.0",
-        "remark-gfm": "^4.0.0",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7"
     },
