--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "cz-customizable": "^7.0.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.7",
+        "lottie-react": "^2.4.0",
         "next": "14.2.4",
         "next-mdx-remote": "^5.0.0",
         "next-themes": "^0.3.0",
