--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,13 @@
 
 version: 2
 updates:
-    - package-ecosystem: 'npm' # See documentation for possible values
-      directory: '/' # Location of package manifests
+    - package-ecosystem: npm
+      directory: '/'
       schedule:
-          interval: 'weekly'
+          interval: weekly
+      open-pull-requests-limit: 10
+      commit-message:
+          prefix: 'deps'
+      # Enable auto-merge
+      allow:
+          - dependency-type: all
